.infrastructure/local/postgres/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
    component: database
spec:
  clusterIP: None
  selector:
    app: postgres
    component: database
  ports:
    - port: 5432
